--- a/C3-urdf/package.xml
+++ b/C3-urdf/package.xml
@@ -7,7 +7,7 @@
 for C3-urdf robot</p>
   </description>
   <author>me</author>
-  <maintainer email="me2email.com" />
+  <maintainer email="me2@email.com" />
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roslaunch</build_depend>
